4 Mar 2005: Wouter
	- xfrd zone and soa memory structure definitions.
	- xfrd init zones.
	- xfrd read and write state file code.
	- option for difffile: and xfrdfile: config lines.

3 Mar 2005: Wouter
	- Removed double kill after reload. Only socket cmd send.
	- Added code to handle race condition where xfrd is restarted
	  during a succesfull reload. Afterwards, the new server_main
	  only has the old xfrd pid, new xfrd is an orphan.
	  Solution: when xfrd closes cmd channel (i.e. it quit)
	  unexpectedly, send sighup to all processes in the group.
	  This should quit the orphan & all children & reload the
	  server_main, which will fork the children and xfrd again.

2 Mar 2005: Wouter
	- Added nsd-checkconf.8 to makedist.sh replace list.
	- DIFF file format updated.
	- removed tsigkey->server value, it was read in, but unused.
	- new function to add config file keys to tsig.
	- nsd-checkconf checks parsing of keys. 
	- Updated sample key file with valid keys.
	- added first xfrd files. xfrd is started from server_main.
	  xfrd listens to server and server to xfrd. xfrd is restarted
	  if it dies unexpectedly. xfrd quits when server signals it.
	  xfrd survives nsd reloads.
	- nsd_options no longer global variable.

1 Mar 2005: Wouter
	- Nicer text in nsd.8.
	- nsd.c prettier code in option handling.
	- zonec.c code prettier in option handling, also chdir bug removed.
	  zonec uses the zone definitions in the config file.
	  updated zonec.8 and usage().
	- nsd also chdirs to the zonedir, otherwise nsd and zonec would
	  try to read the database: file from different directories.
	  .(it does the chdir before the chroot call.)
	- new calling syntax for zonec and nsd, because of new config file.
	- options added acl acceptance tests (no tsig yet).
	- added unit test for options.c - for acl tests.
	- zonec removed unused vars, nsd-checkconf print arguments.
	- nsd-checkconf.8 manual page.

28 Feb 2005: Wouter
	- checked in options.h and config parser code.