@@ -1,3 +1,6 @@
+5 Mar 2005: Wouter
+	- xfrd read and write work. Statefile is "nsd.xfst".
+
 4 Mar 2005: Wouter
 	- xfrd zone and soa memory structure definitions.
 	- xfrd init zones.
